[package]
authors = [ "Arctic Penguin" ]
name = "zfs-undelete"
version = "0.1.0"
edition = "2021"
description = "an easy-to-use CLI tool to recover files from zfs snapshots"
repository = "https://github.com/arctic-penguin/zfs-undelete"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
path-absolutize = "3.0.14"

[[bin]]
name = "zfs-undelete"
